--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase": "^10.11.1",
     "install": "^0.13.0",
     "npm": "^10.7.0",
     "react": "^18.3.1",
