--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "components": "^0.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.11.1",
@@ -23,6 +24,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
+    "styled": "^1.0.0",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
