--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
   "main": "index.js",
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "ISC"
 
-  "hompage": "https://beingborn.github.io/react-projects"
 }
